--- a/newsfeeder-service/pkg/.env
+++ b/newsfeeder-service/pkg/.env
@@ -4,7 +4,7 @@ GRPC_ADDRESS=:8082
 LOG_LEVEL=debug
 URLBOX_API_URL=https://api.urlbox.io/v1/
 URLBOX_API_TOKEN=TFb7yVm5aCzXBXhD
-URLBOX_API_SECRET=b12ef2ba05a64af995fc17e2a4efb471
+URLBOX_API_SECRET=
 DB_HOST=localhost
 DB_PORT=15432
 DB_USER=postgres
